<resources>
    <string name="app_name">Joke Generator</string>
    <string name="test_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title">Jumble of Jolly Jokes</string>
    <string name="kek">Haha LOL</string>
    <string name="cringe">Not Funny,\nDidn\'t Laugh</string>
    <string name="generate">Click to Laugh!</string>
</resources>